--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -16,10 +16,7 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="" alt="logo designo" />
-        <img src="" alt="logo designo nom" />
-      </div>
+      <img src="../src/img/Group 13.png" alt="logo designo" />
       <nav>
         <ul>
           <li><a href=""></a>our company</li>
