--- a/about.html
+++ b/about.html
@@ -14,15 +14,14 @@
         <header>
             <div>
                 <img src="" alt="Logo Designo">
-                <img src="" alt="Logo text">
+                <nav>
+                    <ul>
+                        <li><a href="">Our compagnie</a></li>
+                        <li><a href="">Locations</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="">Our compagnie</a></li>
-                    <li><a href="">Locations</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
         </header>
         <main>
             <section>
@@ -31,10 +30,45 @@
                 startups, corporations, and nonprofits alike to craft designs that make real impact. We're always looking forward to 
                 creating brands, products, and digital experiences that connect with our clients' audiences.
                 </p>
+                <img src="" alt="work table">
             </section>
-            <section></section>
-            <section></section>
-            <section></section>
+            <section>
+                <img src="" alt="watching art">
+                <h1>World-class talent</h1>
+                <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully crafted from concept to 
+                launch, ensuring success in its given market. We are constantly updating our skills in a myriad of platforms. Our team is 
+                multi-disciplinary and we are not merely interested in form — content and meaning are just as important. We give great 
+                importance to craftsmanship, service, and prompt delivery. Clients have always been impressed with our high-quality 
+                outcomes that encapsulates their brand's story and mission.
+                </p>
+            </section>
+            <section>
+                <article>
+                    <img src="" alt="canada">
+                    <h2>CANADA</h2>
+                    <a href="">SEE LOCATION</a>
+                </article>
+                <article>
+                    <img src="" alt="Australia">
+                    <h2>AUSTRALIA</h2>
+                    <a href="">SEE LOCATION</a>
+                </article>
+                <article>
+                    <img src="" alt="United Kingdom">
+                    <h2>UNITED KINGDOM</h2>
+                    <a href="">SEE LOCATION</a>
+                </article>
+            </section>
+            <section>
+                <h1>The real deal</h1>
+                <p>As strategic partners in our clients' businesses, we are ready to take on any challenge as our own. Solving real 
+                problems require empathy and collaboration, and we strive to bring a fresh perspective to every opportunity. We make 
+                design and technology more accessible and give you tools to measure success. We are visual storytellers in appealing 
+                and captivating ways. By combining business and marketing strategies, we inspire audiences to take action and drive real
+                results.
+                </p>
+                <img src="" alt="stick on the wall">
+            </section>
         </main>
         <footer>
             <section>
