--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -12,6 +12,15 @@
     <title>App Design</title>
 </head>
 <body>
+    <header><img src="../src/img/Group 13.png" alt="logo designo" />
+        <nav>
+          <ul>
+            <li><a href=""></a>our company</li>
+            <li><a href=""></a>locations</li>
+            <li><a href=""></a>contact</li>
+          </ul>
+        </nav>
+    </header>
     <main>
         <section class="">
             <h2>App Design</h2>
