--- a/Tanguy/webdesing.html
+++ b/Tanguy/webdesing.html
@@ -12,7 +12,14 @@
 </head>
 <body>
     <header>
-
+        <img src="../src/img/Group 13.png" alt="logo designo" />
+      <nav>
+        <ul>
+          <li><a href=""></a>our company</li>
+          <li><a href=""></a>locations</li>
+          <li><a href=""></a>contact</li>
+        </ul>
+      </nav>
     </header>
     <main>
         <section class="">
