--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -38,7 +38,7 @@
           </p>
         </div>
         <div>
-          <form action="">
+          <form action="POST">
             <div>
               <label for="Name">Name</label><br />
               <input name="name" type="text" /> <br />
@@ -60,19 +60,19 @@
 
       <section>
         <article>
-          <img src="" alt="brussels tower" />
+          <img src="../src/img/Group 10.svg" alt="brussels tower" />
           <h1>Belgium</h1>
           <a href=""></a>
         </article>
 
         <article>
-          <img src="" alt="sydney opera" />
+          <img src="../src/img/Group 15.svg" alt="sydney opera" />
           <h1>Australia</h1>
           <a href=""></a>
         </article>
 
         <article>
-          <img src="" alt="london bridge" />
+          <img src="../src/img/Group 17.svg" alt="london bridge" />
           <h1>United Kingdom</h1>
           <a href=""></a>
         </article>
@@ -81,10 +81,7 @@
 
     <footer>
       <section>
-        <div>
-          <img src="" alt="logo designo" />
-          <img src="" alt="logo designo nom" />
-        </div>
+        <img src="../src/img/Group 13-1.png" alt="logo designo" />
         <nav>
           <ul>
             <li><a href=""></a>our company</li>
