--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <body>
         <header>
             <div>
-                <img src="" alt="Logo Designo">
-                <img src="" alt="Logo text">
+                <img src="./src/img/Group 13.png" alt="Logo Designo">
+                <nav>
+                    <ul>
+                        <li><a href="">Our compagnie</a></li>
+                        <li><a href="">Locations</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="">Our compagnie</a></li>
-                    <li><a href="">Locations</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
         </header>
         <main>
             <section>
@@ -37,34 +36,37 @@
             <section>
                 <article>
                     <h1>Web Design</h1>
+                    <img src="./src/img/black_front copy 4-1.png" alt="laptop">
                     <a href="">View projects</a>
                 </article>
                 <article>
                     <h1>App Design</h1>
+                    <img src="./src/img/Bitmap.png" alt="smartphone">
                     <a href="">View projects</a>
                 </article>
                 <article>
                     <h1>Graphic Design</h1>
+                    <img src="./src/img/Bitmap.jpg" alt="graphic">
                     <a href="">View projects</a>
                 </article>
             </section>
             <section>
                 <div>
-                    <img src="" alt="">
+                    <img src="./src/img/Group 23.svg" alt="working on tablet">
                     <h2>PASSIONATE</h2>
                     <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. 
                     We merge art, design, and technology into exciting new solutions.
                     </p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./src/img/Group 22.svg" alt="working on her desk">
                     <h2>RESOURCEFUL</h2>
                     <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer 
                     collaboration. It guarantees superior results that fulfill our clients' needs.
                     </p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./src/img/Group 21.svg" alt="share file">
                     <h2>FRIENDLY</h2>
                     <p> We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, 
                     and we strive to give them the best experience a company can provide.
@@ -80,16 +82,15 @@
             </section>
             <section>
                 <div>
-                    <img src="" alt="Logo Designo">
-                    <img src="" alt="Logo text">
+                    <img src="./src/img/Group 13-1.png" alt="Logo Designo">
+                    <nav>
+                        <ul>
+                            <li><a href="">Our compagnie</a></li>
+                            <li><a href="">Locations</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="">Our compagnie</a></li>
-                        <li><a href="">Locations</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
             </section>
             <section>
                 <div>
