--- a/Tanguy/webdesing.html
+++ b/Tanguy/webdesing.html
@@ -30,37 +30,37 @@
 
         <section class="">
             <div class="">
-                <img src="" alt="image express">
+                <img src="../src/img/Express - Desktop-5.jpg" alt="image express">
                 <h2>EXPRESS</h2>
                 <p>A multi-carrier shipping website for ecommerce businesses</p>
             </div>
 
             <div class="">
-                <img src="" alt="image transfer">
+                <img src="../src/img/Express - Desktop-4.jpg" alt="image transfer">
                 <h2>TRANSFER</h2>
                 <p>Site for low-cost money transfers and sending money within seconds</p>
             </div>
 
             <div class="">
-                <img src="" alt="image photon">
+                <img src="../src/img/Express - Desktop-3.jpg" alt="image photon">
                 <h2>PHOTON</h2>
                 <p>A state-of-the-art music player with high-resolution audio and DSP effects</p>
             </div>
 
             <div class="">
-                <img src="" alt="image builder">
+                <img src="../src/img/Express - Desktop-2.jpg" alt="image builder">
                 <h2>BUILDER</h2>
                 <p>Connects users with local contractors based on their location</p>
             </div> 
 
             <div class="">
-                <img src="" alt="image blogr">
+                <img src="../src/img/Express - Desktop-1.jpg" alt="image blogr">
                 <h2>BLOGR</h2>
                 <p>Blogr is a platform for creating an online blog or publication</p>
             </div>
 
             <div class="">
-                <img src="" alt="image camp">
+                <img src="../src/img/Express - Desktop.jpg" alt="image camp">
                 <h2>CAMP</h2>
                 <p>Get expert training in coding, data, design, and digital marketing</p>
             </div>
@@ -68,13 +68,13 @@
 
         <section class="">
             <article class="">
-                <img src="" alt="image app design">
+                <img src="../src/img/Bitmap-1.jpg" alt="image app design">
                 <h1>APP DESIGN</h1>
                 <a href="appdesign.html" target="_blank">VIEW PROJECTS</a>
             </article>
 
             <article class="">
-                <img src="" alt="image graphic design">
+                <img src="../src/img/Bitmap.jpg" alt="image graphic design">
                 <h1>GRAPHIC DESIGN</h1>
                 <a href="">VIEW PROJECTS</a>
             </article>
