--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                     <h1>Award-winning custom designs and digital branding solutions</h1>
                     <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design, 
                     and engaging brand experiences. Find out more about our services.
-                    </p>  
+                    </p> 
+                    <img src="./src/img/black_front copy 4-1.png" alt="phone"> 
                     <a href="">Learn More</a>                  
                 </article>
             </section>
             <section>
                 <article>
                     <h1>Web Design</h1>
-                    <img src="./src/img/black_front copy 4-1.png" alt="laptop">
+                    <img src="./src/img/Group 17.jpg" alt="laptop">
                     <a href="">View projects</a>
                 </article>
                 <article>
