--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <article>
                     <h1>Web Design</h1>
                     <img src="./src/img/Group 17.jpg" alt="laptop">
-                    <a href="">View projects</a>
+                    <a href="Tanguy/webdesing.html" target="_blank">View projects</a>
                 </article>
                 <article>
                     <h1>App Design</h1>
                     <img src="./src/img/Bitmap.png" alt="smartphone">
-                    <a href="">View projects</a>
+                    <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
                 </article>
                 <article>
                     <h1>Graphic Design</h1>
