--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="./src/img/Group 13.png" alt="Logo Designo">
                 <nav>
                     <ul>
-                        <li><a href="">Our compagny</a></li>
+                        <li><a href="">Our company</a></li>
                         <li><a href="">Locations</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
