--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -41,11 +41,11 @@
           <form action="POST">
             <div>
               <label for="Name">Name</label><br />
-              <input name="name" type="text" /> <br />
+              <input name="name" type="text" required /> <br />
               <label for="Email Address">Email Address</label><br />
-              <input name="email address" type="text" /> <br />
+              <input name="email address" type="text" required /> <br />
               <label for="Phone">Phone</label><br />
-              <input name="phone" type="text" /> <br />
+              <input name="phone" type="text" required /> <br />
             </div>
             <div>
               <label for="Your Message">Your Message</label>
@@ -85,8 +85,8 @@
         <nav>
           <ul>
             <li><a href=""></a>our company</li>
-            <li><a href=""></a>locations</li>
-            <li><a href=""></a>contact</li>
+            <li><a href="./locations.html"></a>locations</li>
+            <li><a href="./contact.html"></a>contact</li>
           </ul>
         </nav>
       </section>
