--- a/mariya/locations.html
+++ b/mariya/locations.html
@@ -82,8 +82,8 @@
         <nav>
           <ul>
             <li><a href=""></a>our company</li>
-            <li><a href=""></a>locations</li>
-            <li><a href=""></a>contact</li>
+            <li><a href="./locations.html"></a>locations</li>
+            <li><a href="./contact.html"></a>contact</li>
           </ul>
         </nav>
       </section>
