add class index and about

--- a/about.html
+++ b/about.html
@@ -1,112 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Home page"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Home page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Designo</title>
-</head>
-    <body>
-        <header>
-            <div>
-                <img src="./src/img/Group 13.png" alt="Logo Designo">
-                <nav>
-                    <ul>
-                        <li><a href="">Our company</a></li>
-                        <li><a href="">Locations</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <section>
-                <h1>About Us</h1>
-                <p>Founded in 2010, we are a creative agency that produces lasting results for our clients. We've partnered with many 
-                startups, corporations, and nonprofits alike to craft designs that make real impact. We're always looking forward to 
-                creating brands, products, and digital experiences that connect with our clients' audiences.
-                </p>
-                <img src="./src/img/Group 3.jpg" alt="work table">
-            </section>
-            <section>
-                <img src="./src/img/Group 3 Copy.jpg" alt="watching art">
-                <h1>World-class talent</h1>
-                <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully crafted from concept to 
-                launch, ensuring success in its given market. We are constantly updating our skills in a myriad of platforms. Our team is 
-                multi-disciplinary and we are not merely interested in form — content and meaning are just as important. We give great 
-                importance to craftsmanship, service, and prompt delivery. Clients have always been impressed with our high-quality 
-                outcomes that encapsulates their brand's story and mission.
-                </p>
-            </section>
-            <section>
-                <article>
-                    <img src="./src/img/Group 10.svg" alt="canada">
-                    <h2>CANADA</h2>
-                    <a href="">SEE LOCATION</a>
-                </article>
-                <article>
-                    <img src="./src/img/Group 15.svg" alt="Australia">
-                    <h2>AUSTRALIA</h2>
-                    <a href="">SEE LOCATION</a>
-                </article>
-                <article>
-                    <img src="./src/img/Group 17.svg" alt="United Kingdom">
-                    <h2>UNITED KINGDOM</h2>
-                    <a href="">SEE LOCATION</a>
-                </article>
-            </section>
-            <section>
-                <h1>The real deal</h1>
-                <p>As strategic partners in our clients' businesses, we are ready to take on any challenge as our own. Solving real 
-                problems require empathy and collaboration, and we strive to bring a fresh perspective to every opportunity. We make 
-                design and technology more accessible and give you tools to measure success. We are visual storytellers in appealing 
-                and captivating ways. By combining business and marketing strategies, we inspire audiences to take action and drive real
-                results.
-                </p>
-                <img src="./src/img/Bitmap Copy.jpg" alt="stick on the wall">
-            </section>
-        </main>
-        <footer>
-            <section>
-                <h1>Let's talk about your project</h1>
-                <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
-                <a href="">GET IN TOUCH</a>
-            </section>
-            <section>
-                <div>
-                    <img src="./src/img/Group 13-1.png" alt="Logo Designo">
-                    <nav>
-                        <ul>
-                            <li><a href="">Our compagnie</a></li>
-                            <li><a href="">Locations</a></li>
-                            <li><a href="">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <h3>Designo Central Office</h3>
-                    <p>386 Wellington Street1000 Brussels - Belgium</p>
-                </div>
-                <div>
-                    <h3>Contact Us (Central Office)</h3>
-                    <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
-                </div>
-            </section>
-            <section>
-                <ul>
-                    <li><i class="fa-brands fa-facebook-square"></i></li>
-                    <li><i class="fa-brands fa-youtube-square"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-pinterest"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                </ul>
-            </section>
-        </footer>
-    </body>
+  </head>
+  <body>
+    <header>
+      <img
+        src="./src/img/Group 13.png"
+        alt="Logo Designo"
+        class="header__nav__img"
+      />
+      <nav>
+        <ul class="header__nav__order">
+          <li><a href="">Our company</a></li>
+          <li><a href="./mariya/locations.html">Locations</a></li>
+          <li><a href="./mariya/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section__aboutUs">
+        <h1>About Us</h1>
+        <p>
+          Founded in 2010, we are a creative agency that produces lasting
+          results for our clients. We've partnered with many startups,
+          corporations, and nonprofits alike to craft designs that make real
+          impact. We're always looking forward to creating brands, products, and
+          digital experiences that connect with our clients' audiences.
+        </p>
+        <img
+          src="./src/img/Group 3.jpg"
+          alt="work table"
+          class="section__aboutUs__img"
+        />
+      </section>
+      <section class="section__skills">
+        <img
+          src="./src/img/Group 3 Copy.jpg"
+          alt="watching art"
+          class="section__skills__img"
+        />
+        <h1>World-class talent</h1>
+        <p>
+          We are a crew of strategists, problem-solvers, and technologists.
+          Every design is thoughtfully crafted from concept to launch, ensuring
+          success in its given market. We are constantly updating our skills in
+          a myriad of platforms. Our team is multi-disciplinary and we are not
+          merely interested in form — content and meaning are just as important.
+          We give great importance to craftsmanship, service, and prompt
+          delivery. Clients have always been impressed with our high-quality
+          outcomes that encapsulates their brand's story and mission.
+        </p>
+      </section>
+      <section class="section__location">
+        <article class="location__article__canada">
+          <img src="./src/img/Group 10.svg" alt="canada" class="canada__img" />
+          <h2>CANADA</h2>
+          <a href="">SEE LOCATION</a>
+        </article>
+        <article class="location__article__australia">
+          <img
+            src="./src/img/Group 15.svg"
+            alt="Australia"
+            class="australia__img"
+          />
+          <h2>AUSTRALIA</h2>
+          <a href="">SEE LOCATION</a>
+        </article>
+        <article class="location__article__uk">
+          <img
+            src="./src/img/Group 17.svg"
+            alt="United Kingdom"
+            class="uk__img"
+          />
+          <h2>UNITED KINGDOM</h2>
+          <a href="">SEE LOCATION</a>
+        </article>
+      </section>
+      <section class="section__solutions">
+        <h1>The real deal</h1>
+        <p>
+          As strategic partners in our clients' businesses, we are ready to take
+          on any challenge as our own. Solving real problems require empathy and
+          collaboration, and we strive to bring a fresh perspective to every
+          opportunity. We make design and technology more accessible and give
+          you tools to measure success. We are visual storytellers in appealing
+          and captivating ways. By combining business and marketing strategies,
+          we inspire audiences to take action and drive real results.
+        </p>
+        <img
+          src="./src/img/Bitmap Copy.jpg"
+          alt="stick on the wall"
+          class="solutions__img"
+        />
+      </section>
+    </main>
+    <footer>
+      <section class="section__contact">
+        <h1>Let's talk about your project</h1>
+        <p>
+          Ready to take it to the next level? Contact us today and find out how
+          our expertise can help your business grow.
+        </p>
+        <a href="">GET IN TOUCH</a>
+      </section>
+      <section class="footer__nav">
+        <div>
+          <img
+            src="./src/img/Group 13-1.png"
+            alt="Logo Designo"
+            class="footer__nav__img"
+          />
+          <nav>
+            <ul class="footer__nav__order">
+              <li><a href="">Our compagnie</a></li>
+              <li><a href="./mariya/locations.html">Locations</a></li>
+              <li><a href="./mariya/contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <section class="section__info">
+        <div class="info__address">
+          <h3>Designo Central Office</h3>
+          <p>386 Wellington Street1000 Brussels - Belgium</p>
+        </div>
+        <div class="info__contact">
+          <h3>Contact Us (Central Office)</h3>
+          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
+        </div>
+      </section>
+      <section class="section__media">
+        <ul class="media__order">
+          <li><i class="fa-brands fa-facebook-square"></i></li>
+          <li><i class="fa-brands fa-youtube-square"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-pinterest"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
+      </section>
+    </footer>
+  </body>
 </html>
