--- a/index.html
+++ b/index.html
@@ -1,117 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Home page"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Home page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./src/css/style.min.css" />
     <title>Designo</title>
-</head>
-    <body>
-        <header>
-            <div>
-                <img src="./src/img/Group 13.png" alt="Logo Designo">
-                <nav>
-                    <ul>
-                        <li><a href="">Our company</a></li>
-                        <li><a href="">Locations</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <section>
-                <article>
-                    <h1>Award-winning custom designs and digital branding solutions</h1>
-                    <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design, 
-                    and engaging brand experiences. Find out more about our services.
-                    </p> 
-                    <img src="./src/img/black_front copy 4-1.png" alt="phone"> 
-                    <a href="">Learn More</a>                  
-                </article>
-            </section>
-            <section>
-                <article>
-                    <h1>Web Design</h1>
-                    <img src="./src/img/Group 17.jpg" alt="laptop">
-                    <a href="Tanguy/webdesing.html" target="_blank">View projects</a>
-                </article>
-                <article>
-                    <h1>App Design</h1>
-                    <img src="./src/img/Bitmap.png" alt="smartphone">
-                    <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
-                </article>
-                <article>
-                    <h1>Graphic Design</h1>
-                    <img src="./src/img/Bitmap.jpg" alt="graphic">
-                    <a href="">View projects</a>
-                </article>
-            </section>
-            <section>
-                <div>
-                    <img src="./src/img/Group 23.svg" alt="working on tablet">
-                    <h2>PASSIONATE</h2>
-                    <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. 
-                    We merge art, design, and technology into exciting new solutions.
-                    </p>
-                </div>
-                <div>
-                    <img src="./src/img/Group 22.svg" alt="working on her desk">
-                    <h2>RESOURCEFUL</h2>
-                    <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer 
-                    collaboration. It guarantees superior results that fulfill our clients' needs.
-                    </p>
-                </div>
-                <div>
-                    <img src="./src/img/Group 21.svg" alt="share file">
-                    <h2>FRIENDLY</h2>
-                    <p> We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, 
-                    and we strive to give them the best experience a company can provide.
-                    </p>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <h1>Let's talk about your project</h1>
-                <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
-                <a href="">GET IN TOUCH</a>
-            </section>
-            <section>
-                <div>
-                    <img src="./src/img/Group 13-1.png" alt="Logo Designo">
-                    <nav>
-                        <ul>
-                            <li><a href="">Our compagnie</a></li>
-                            <li><a href="">Locations</a></li>
-                            <li><a href="">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <h3>Designo Central Office</h3>
-                    <p>386 Wellington Street1000 Brussels - Belgium</p>
-                </div>
-                <div>
-                    <h3>Contact Us (Central Office)</h3>
-                    <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
-                </div>
-            </section>
-            <section>
-                <ul>
-                    <li><i class="fa-brands fa-facebook-square"></i></li>
-                    <li><i class="fa-brands fa-youtube-square"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-pinterest"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                </ul>
-            </section>
-        </footer>
-    </body>
+  </head>
+  <body>
+    <header>
+      <img
+        src="./src/img/Group 13.png"
+        alt="Logo Designo"
+        class="header__nav__img"
+      />
+      <nav>
+        <ul class="header__nav__order">
+          <li><a href="">Our company</a></li>
+          <li><a href="./mariya/locations.html">Locations</a></li>
+          <li><a href="./mariya/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section__services">
+        <article>
+          <h1>Award-winning custom designs and digital branding solutions</h1>
+          <p>
+            With over 10 years in the industry, we are experienced in creating
+            fully responsive websites, app design, and engaging brand
+            experiences. Find out more about our services.
+          </p>
+          <img
+            src="./src/img/black_front copy 4-1.png"
+            alt="phone"
+            class="services__img"
+          />
+          <a href="">Learn More</a>
+        </article>
+      </section>
+      <section class="section__projects">
+        <article class="projects__web">
+          <h1>Web Design</h1>
+          <img src="./src/img/Group 17.jpg" alt="laptop" />
+          <a href="Tanguy/webdesing.html" target="_blank">View projects</a>
+        </article>
+        <article class="projects__app">
+          <h1>App Design</h1>
+          <img src="./src/img/Bitmap.png" alt="smartphone" />
+          <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
+        </article>
+        <article class="projects__graphic">
+          <h1>Graphic Design</h1>
+          <img src="./src/img/Bitmap.jpg" alt="graphic" />
+          <a href="">View projects</a>
+        </article>
+      </section>
+      <section class="section__values">
+        <div class="values__passion">
+          <img src="./src/img/Group 23.svg" alt="working on tablet" />
+          <h2>PASSIONATE</h2>
+          <p>
+            Each project starts with an in-depth brand research to ensure we
+            only create products that serve a purpose. We merge art, design, and
+            technology into exciting new solutions.
+          </p>
+        </div>
+        <div class="values__resourceful">
+          <img src="./src/img/Group 22.svg" alt="working on her desk" />
+          <h2>RESOURCEFUL</h2>
+          <p>
+            Everything that we do has a strategic purpose. We use an agile
+            approach in all of our projects and value customer collaboration. It
+            guarantees superior results that fulfill our clients' needs.
+          </p>
+        </div>
+        <div class="values__friendly">
+          <img src="./src/img/Group 21.svg" alt="share file" />
+          <h2>FRIENDLY</h2>
+          <p>
+            We are a group of enthusiastic folks who know how to put people
+            first. Our success depends on our customers, and we strive to give
+            them the best experience a company can provide.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section class="section__contact">
+        <h1>Let's talk about your project</h1>
+        <p>
+          Ready to take it to the next level? Contact us today and find out how
+          our expertise can help your business grow.
+        </p>
+        <a href="">GET IN TOUCH</a>
+      </section>
+      <section class="footer__nav">
+        <div>
+          <img
+            src="./src/img/Group 13-1.png"
+            alt="Logo Designo"
+            class="footer__nav__img"
+          />
+          <nav>
+            <ul class="footer__nav__order">
+              <li><a href="">Our compagnie</a></li>
+              <li><a href="./mariya/locations.html">Locations</a></li>
+              <li><a href="./mariya/contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <section class="section__info">
+        <div class="info__address">
+          <h3>Designo Central Office</h3>
+          <p>386 Wellington Street1000 Brussels - Belgium</p>
+        </div>
+        <div class="info__contact">
+          <h3>Contact Us (Central Office)</h3>
+          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
+        </div>
+      </section>
+      <section class="section__media">
+        <ul class="media__order">
+          <li><i class="fa-brands fa-facebook-square"></i></li>
+          <li><i class="fa-brands fa-youtube-square"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-pinterest"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
+      </section>
+    </footer>
+  </body>
 </html>
